@@ -1,5 +1,8 @@
 Version 2.02.23 - 
 ====================================
+  Move .cache file into a new /etc/lvm/cache directory by default.
+  Add devices/cache_dir & devices/cache_file_prefix, deprecating devices/cache.
+  Create directory in fcntl_lock_file() if required.
   Exclude readline support from lvm.static.
   Fix a leak in a reporting error path (2.02.19).
 
